--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-vibration": {},
             "cordova-plugin-whitelist": {},
+            "cordova-pdf-generator": {}
         }
     },
     "dependencies": {
@@ -52,6 +53,7 @@
         "cordova-plugin-splashscreen": "~3.2.1",
         "cordova-plugin-statusbar": "~2.1.2",
         "cordova-plugin-vibration": "~2.1.0",
-        "cordova-plugin-whitelist": "~1.2.1"
+        "cordova-plugin-whitelist": "~1.2.1",
+        "cordova-pdf-generator": "~1.2.1"
     }
 }
